ftp support, private config file public template config file

--- a/src/BackupGenerationShaper/app.config
+++ b/src/BackupGenerationShaper/app.config
@@ -12,22 +12,9 @@
         <value>True</value>
       </setting>
     </BackupGenerationShaper.Properties.Settings>
-    <ShaperConfig>
-      <DebugOptions
-        IsSimulateOnly="false"
-        IsInteractive="true"
-        OnExceptionSendMail="true"
-        MailTo="w.muellauer@mdc.at"
-        MailFrom="spike.mdc@mdc.at"
-        MailSMTP="mail.mdc.at"/>
-      <LogOptions
-        LogToScreen="true"
-        LogToFile="true"
-        LogDirectory="c:\tmp"/>
-      <DirectoryList>
-        <add DirectoryName="c:\tmp" TsFormat="yyyy_MM_dd_hh_mm_ss" GenerationCount="2" />
-      </DirectoryList>
-    </ShaperConfig>
+
+    <ShaperConfig configSource="ShaperConfig.private.config" />
+ 
   </userSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
