--- a/src/Spike_AppConfigSectionReader/Spike_AppConfigSectionReader.csproj
+++ b/src/Spike_AppConfigSectionReader/Spike_AppConfigSectionReader.csproj
@@ -74,6 +74,10 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="ShaperConfig.private.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="ShaperConfig.template.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
