--- a/src/Spike_AppConfigSectionReader/App.config
+++ b/src/Spike_AppConfigSectionReader/App.config
@@ -18,27 +18,16 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <userSettings>
+
     <Spike_AppConfigSectionReader.Properties.Settings>
       <setting name="DefaultValue" serializeAs="String">
         <value>Test.exe</value>
       </setting>
     </Spike_AppConfigSectionReader.Properties.Settings>
-    <ShaperConfig>
-      <DebugOptions
-        IsVerbose="false"
-        IsInteractive="false"
-        OnExceptionSendMail="true"
-        MailTo="w.muellauer@mdc.at"
-        MailFrom="spike.mdc@mdc.at"
-        MailSMTP="mail.mdc.at"/>
-      <LogOptions
-        IsLogging="false"
-        LogDirectory="c:\tmp"/>
-      <DirectoryList>
-        <add DirectoryName="c:\" TsFormat="YYYY_MM_DD" GenerationCount="1" />
-        <add DirectoryName="d:\" TsFormat="YYYY_MM_DD" GenerationCount="2" />
-      </DirectoryList>
-    </ShaperConfig>
+
+
+    <ShaperConfig configSource="ShaperConfig.private.config" />
+    
   </userSettings>
 
 </configuration>
